--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@ def lowercase(*args):
            
 def swapcase(*args):
     result = input.value.swapcase()
+    console.log(result)
+    output.innerText = result
            
 def clear(*args):
     input.value=''
